--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="floating-shape shape4"></div>
 
     <footer>
-        <p>         Want my contact info?   [ dewi.watkins@pwc.com ]    [ +44 07419844141 ]</p>
+        <p>            --Want my contact info?   [ dewi.watkins@pwc.com ]    [ +44 07419844141 ]</p>
     </footer>
     <script src="script.js"></script>
 </body>
