--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <h1 id="animated-title">Dewi J. Watkins</h1>
+        <h1 id="animated-title">Dewi_Watkins</h1>
     </header>
 
     <nav>
