--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         </div>
 
         <div class="image-section">
-            <img src="rainforest.jpg" alt="a picture of a rainforest">
+            <img src="rainforest.jpg" alt="a picture of a rainforest" id="hideOnMobile">
         </div>
     </div>
     <div class="content2", id="portfolio">
 
         <div class="image-section">
-            <img src="gnome.jpg" alt="a picture of a rainforest">
+            <img src="gnome.jpg" alt="a picture of a rainforest" id="hideOnMobile">
         </div>
         <div class="text-section">
             <h2>I can get it done.</h2>
@@ -65,7 +65,7 @@
         </div>
 
         <div class="image-section">
-            <img src="pholiota.jpg" alt="a picture of a rainforest">
+            <img src="pholiota.jpg" alt="a picture of a rainforest" id="hideOnMobile">
         </div>
     </div>
     
