--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dewi J. Watkins</title>
+    <title>Dewi Watkins</title>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&family=Tomorrow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&family=Tomorrow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -59,7 +59,7 @@
     <div class="content", id="cv">
         <div class="text-section">
             <h2>Want to see what I've been up to?</h2>
-            <p>Below I’ve linked my personal GitHub account where I post my personal projects.<br>If you’d like to reach out to me please email me or send me a text at the address/number below.</p>
+            <p>Below I’ve linked my personal GitHub account where I post my personal projects.<br><br>If you’d like to reach out to me please email me or send me a text at the address/number below.</p>
             <a href="https://github.com/dewi-w" class="button" style="background-color: #49a861;">GitHub</a>
             
         </div>
