--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
         <div class="text-section">
             <h2>Want to see what I've been up to?</h2>
             <p>Below I’ve linked my personal GitHub account where I post my personal projects.<br><br>If you’d like to reach out to me please email me or send me a text at the address/number below.</p>
-            <a href="https://github.com/dewi-w" class="button" style="background-color: #49a861;">GitHub</a>
+            <a href="https://github.com/dewi-w" target="_blank">
+                <img src="github.png" alt="Description of Image" style="width:14vh;height:14vh;">
+            </a>
             
         </div>
 
